# NLC

./: GangnamAdd.csv  GangnamApartment.csv  bb.ipynb  coordtoaddress.ipynb  database.py  fastapi.db  index.html  insert_data.py  insert_data_mongodb.py  main.py  models.py  naverLandCrawling.py  naverland.ipynb  output.html  pyproject.toml  real_estate_listings.csv  requirements.txt  양천구신월동_list.csv
data/: GangnamAdd.csv  GangnamOfficetel.csv  locations.json
dataNop/: apartment.csv  officetel.csv  송파구 가락1동_crawling.csv  송파구 가락2동_crawling.csv  송파구 가락본동_crawling.csv  송파구 거여1동_crawling.csv  송파구 거여2동_crawling.csv  송파구 마천1동_crawling.csv  송파구 마천2동_crawling.csv  송파구 문정1동_crawling.csv  송파구 문정2동_crawling.csv  송파구 방이1동_crawling.csv  송파구 방이2동_crawling.csv  송파구 삼전동_crawling.csv  송파구 석촌동_crawling.csv  송파구 송파1동_crawling.csv  송파구 송파2동_crawling.csv  송파구 오금동_crawling.csv  송파구 오륜동_crawling.csv  송파구 위례동_crawling.csv  송파구 잠실2동_crawling.csv  송파구 잠실3동_crawling.csv  송파구 잠실4동_crawling.csv  송파구 잠실6동_crawling.csv  송파구 잠실7동_crawling.csv  송파구 잠실본동_crawling.csv  송파구 장지동_crawling.csv  송파구 풍납1동_crawling.csv  송파구 풍납2동_crawling.csv
js/: main.js
lands/: land_crud.py  land_router.py  land_schema.py
lands/model/: land_schema.py
lands/repository/: land_crud.py
scripts/: crawl_data.py
style/: styles.css
users/: user_router.py
users/model/: user_schema.py
users/repository/: user_crud.py
